# gtkada

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .travis.yml  ANNOUNCE  AUTHORS  COPYING.RUNTIME  Dockerfile  INSTALL  Makefile.in  README  README.md  aclocal.m4  config.guess  configure  configure.ac  configure.in  dev_guide.md  doinstall  features  features-17  features.old  generate.pl  gtk.gpr  gtkada.gpr  gtkada_gps.gpr  gtkada_shared.gpr.in  known-problems  known-problems-3.14  known-problems.old  mapping.pl  shared.gpr  shared.gpr.in  transition.txt  transition_notes.md  transition_notes.txt
.github/workflows/: gnat-ce.yml  native.yml
contrib/: ANNOUNCE  AUTHORS  COPYING  GLib-2.0.gir  GObject-2.0.gir  Gdk-3.0.gir  Gdk-4.0.gir  Gio-2.0.gir  Graphene-1.0.gir  INSTALL  Makefile  Makefile.in  Pango-1.0.gir  Python-2.6.4.diff  README  README.Attic  aclocal.m4  adaformat.py  atk-2.4.0-win32.diff  binding.pl  binding.py  binding.toml  binding.xml  binding_gtkada.py  bintray.json  cairo-1.0.2.diff  cairo-1.0.4.diff  cairo-1.10.2-win32.diff  cairo-1.12.12-solaris.diff  cairo-1.12.16.diff  cairo-1.2.4.diff  cairo-1.2.6.diff  cairo-1.4.2.diff  cairo-1.4.6.diff  cairo-1.6.4.diff  cairo-1.8.0.diff  cairo-1.8.2.diff  configure  configure.in  contrib.gpr  (+156 more)
contrib/binding/: GAction.toml  RECOMMENDATIONS.md
contrib/gtk3-gir/: GObject-2.0.gir
contrib/wimp/: Makefile  gtkrc  wimp_rc_style.c  wimp_rc_style.h  wimp_style.c  wimp_style.h  wimp_theme_main.c
docs/: 2.0-missing.txt  2.0-transition.txt  2.2-missing.txt  Makefile  Makefile.in  dgate.1  docgen.css  docgen_gtkada.py  gate.1  generate_docs.gpr  gtk-build.txt  gtkada-config.1  gtkada.css  gtkada.latex  tags.css  texi2html  xft-build.txt
docs/gtkada_rm/: .cvsignore  Makefile  Makefile.in  docgen_gtkada.py  generate_doc.pl  generate_docs.gpr  generate_html_doc.pl  gtkada_documentation.gpr  gtkada_rm.css  gtkada_rm.js  gtkada_rm.texi
docs/gtkada_ug/: .cvsignore  Makefile  Makefile.in  Object-oriented_features.rst  applications.rst  boxes.eps  conf.py  debugging.rst  getting_started.rst  glade.rst  gtk_parasite.rst  gtkada_ug.texi  hierarchical_composition.rst  hierarchy.eps  hierarchy.txt  index.rst  intro.rst  license.rst  object_oriented.rst  reporting_bugs.rst  resource_files.rst  signals.rst  system_dependencies.rst  transition.rst  transition_3_14_to_3_22.rst
docs/transition/: Makefile  conf.py  gdk.rst  general.rst  glib.rst  gnome.rst  gtk.rst  gtkada.rst  index.rst  make.bat  pango.rst
examples/: Makefile  README  file.glade  menu.glade
examples/base_widget/: Makefile  README  main.adb  my_widget.adb  my_widget.ads
examples/calendar_combo/: Makefile  calendar_combo.adb  calendar_combo.ads  main.adb
examples/composite_widget/: Makefile  README  main.adb  my_dialog.adb  my_dialog.ads  test.adb
examples/display_switch/: test_display_switch.adb
examples/documentation/: Makefile  README  banner.adb  clist.adb  contextual.adb  draw.adb  glist_traverse.adb  toggle.adb  tooltips.adb
gtkada_demo/: README  common.ads  create_about.adb  create_alignment.adb  create_alignment.ads  create_application.adb  create_arrow.adb  create_arrow.ads  create_assistant.adb  create_box.adb  create_builder.adb  create_builder.ads  create_buttons.adb  create_buttons.ads  create_cairo.ads  create_calendar.adb  create_canvas_view_composite.adb  create_canvas_view_composite.ads  create_canvas_view_edit.adb  create_canvas_view_edit.ads  create_canvas_view_events.ads  create_canvas_view_items.adb  create_canvas_view_links.adb  create_canvas_view_minimap.adb  create_canvas_view_minimap.ads  create_canvas_view_routes.adb  create_canvas_view_routes.ads  create_canvas_view_rtrees.adb  create_canvas_view_rtrees.ads  create_check_buttons.adb  create_check_buttons.ads  create_color_chooser.adb  create_color_selection.adb  create_css_editor.adb  create_custom_widget.adb  create_custom_widget.ads  create_dialog.adb  create_dnd.adb  create_file_chooser.ads  create_fixed.ads  (+50 more)
m4/: add_os_specific_flags.m4  check_build_type.m4  check_opengl.m4  gnu_gettext.m4  gtk-4.0.m4  path_gnat.m4  path_gtk.m4  to_gpr.m4
po/: build_skeleton.pl
projects/: .cvsignore  Makefile  Makefile.in  generate_prj.sh  gtkada.gpr  gtkada.gpr.in  gtkada.lgpr  gtkada.pc.in  gtkada_gl.gpr  gtkada_gl.gpr.in  gtkada_gl.lgpr  gtkada_glade.gpr  gtkada_install_dynamic.gpr.in  gtkada_install_dynamic_gl.gpr.in  gtkada_install_static.gpr  gtkada_install_static_gl.gpr  gtkada_lib.gpr
src/: .cvsignore  COMPTE-RENDU  COMPTE-RENDU-1998-06-30  COMPTE-RENDU-1998-07-03  Makefile  Makefile.common.in  Makefile.in  cairo-font_face.ads  cairo-font_options.adb  cairo-font_options.ads  cairo-image_surface.adb  cairo-image_surface.ads  cairo-matrix.ads  cairo-misc.ads  cairo-pattern.ads  cairo-pdf.adb  cairo-pdf.ads  cairo-png.adb  cairo-png.ads  cairo-region.adb  cairo-region.ads  cairo-scaled_font.ads  cairo-surface.adb  cairo-surface.ads  cairo-svg.adb  cairo-svg.ads  cairo-user_font.ads  cairo.adb  cairo.ads  check_all  config.h.in  create_test_link.pl  create_test_link.pl.in  dgate.adb  dgate_callbacks.adb  dgate_callbacks.ads  dyna_callbacks.adb  dyna_callbacks.ads  dynagate.adb  fontconfig.adb  (+693 more)
testgtk/: .cvsignore  Makefile  Makefile.in  alien.lwo  application.adb  application.ui  common.adb  common.ads  create_about.adb  create_about.ads  create_alignment.adb  create_alignment.ads  create_application.adb  create_application.ads  create_arrow.adb  create_arrow.ads  create_assistant.adb  create_assistant.ads  create_box.adb  create_box.ads  create_builder.adb  create_builder.ads  create_button_box.adb  create_button_box.ads  create_buttons.adb  create_buttons.ads  create_cairo.adb  create_cairo.ads  create_calendar.adb  create_calendar.ads  create_canvas.adb  create_canvas.ads  create_canvas_links.adb  create_canvas_links.ads  create_canvas_view.adb  create_canvas_view.ads  create_canvas_view_animate.adb  create_canvas_view_animate.ads  create_canvas_view_composite.adb  create_canvas_view_composite.ads  (+202 more)
testsuite/: testsuite.py
xml/: Makefile  gtkada.xml
(+480 files in other folders)
