AC_REVISION($Revision$)
AC_INIT(src/glib.ads)

# Current release settings
GTKADA_MAJOR_VERSION=1
GTKADA_MINOR_VERSION=2
GTKADA_MICRO_VERSION=4
GTKADA_VERSION=$GTKADA_MAJOR_VERSION.$GTKADA_MINOR_VERSION.$GTKADA_MICRO_VERSION

AC_CANONICAL_SYSTEM
AM_ADD_OS_SPECIFIC_FLAGS

# checking for local tools
AM_PATH_DIFF_AND_PATCH
AC_PROG_CC
AM_PATH_GNAT
AM_PATH_PERL
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB

# checking for gtk
AM_PATH_GTK(1.2.2,,AC_MSG_ERROR(Test for GTK failed. See the file 'INSTALL' for help.))

# try to find OpenGL if present
AM_CHECK_OPENGL

# Set the version number of GtkAda
AC_SUBST(GTKADA_VERSION)

EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)

AC_OUTPUT(Makefile src/Makefile src/gtkada-config src/gate testgtk/Makefile)
